Copied libraries into project.  Added .gitignore.

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 deploy.ant.properties.file=/home/mark/.netbeans/6.9/tomcat60.properties
-j2ee.server.home=/home/mark/java/apps/tomcat
-j2ee.server.instance=tomcat60:home=/home/mark/java/apps/tomcat:base=/home/mark/.tomcat
+j2ee.server.home=/home/mark/dev/java/tomcat
+j2ee.server.instance=tomcat60:home=/home/mark/dev/java/tomcat:base=/home/mark/dev/java/catalina-base
 javac.debug=true
 javadoc.preview=true
 user.properties.file=/home/mark/.netbeans/6.9/build.properties
