--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 build.classes.dir=${build.web.dir}/WEB-INF/classes
@@ -25,17 +24,23 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.jackson-core-asl-1.7.4.jar=libs/jackson-core-asl-1.7.4.jar
+file.reference.jackson-mapper-asl-1.7.4.jar=libs/jackson-mapper-asl-1.7.4.jar
+file.reference.slf4j-api-1.6.1.jar=libs/slf4j-api-1.6.1.jar
+file.reference.slf4j-simple-1.6.1.jar=libs/slf4j-simple-1.6.1.jar
+file.reference.xstream-1.3.1.jar=libs/xstream-1.3.1.jar
 includes=**
 j2ee.deploy.on.save=true
 j2ee.platform=1.5
-j2ee.platform.classpath=${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/bin/tomcat-juli.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-3.3.1.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/bin/tomcat-juli.jar
 j2ee.server.type=Tomcat60
 jar.compress=true
 javac.classpath=\
-    ${libs.Logging.classpath}:\
-    ${libs.Jackson.classpath}:\
-    ${libs.xstream.classpath}:\
-    ${libs.Guice.classpath}
+    ${file.reference.jackson-core-asl-1.7.4.jar}:\
+    ${file.reference.jackson-mapper-asl-1.7.4.jar}:\
+    ${file.reference.slf4j-api-1.6.1.jar}:\
+    ${file.reference.slf4j-simple-1.6.1.jar}:\
+    ${file.reference.xstream-1.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
