Big update.  Implemented serialisation, PUT/update and POST/create.  Fixed a couple of bugs (POST was tied to resource URLs when it should root, and the root was not returning content type).  Refactored a bunch of stuff.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,10 +24,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.jackson-core-asl-1.7.4.jar=libs/jackson-core-asl-1.7.4.jar
-file.reference.jackson-mapper-asl-1.7.4.jar=libs/jackson-mapper-asl-1.7.4.jar
+file.reference.jettison-1.2.jar=libs/jettison-1.2.jar
+file.reference.logback-classic-0.9.28.jar=libs/logback-classic-0.9.28.jar
+file.reference.logback-core-0.9.28.jar=libs/logback-core-0.9.28.jar
 file.reference.slf4j-api-1.6.1.jar=libs/slf4j-api-1.6.1.jar
-file.reference.slf4j-simple-1.6.1.jar=libs/slf4j-simple-1.6.1.jar
+file.reference.stax-1.2.0.jar=libs/stax-1.2.0.jar
 file.reference.xstream-1.3.1.jar=libs/xstream-1.3.1.jar
 includes=**
 j2ee.deploy.on.save=true
@@ -36,11 +37,12 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat60
 jar.compress=true
 javac.classpath=\
-    ${file.reference.jackson-core-asl-1.7.4.jar}:\
-    ${file.reference.jackson-mapper-asl-1.7.4.jar}:\
     ${file.reference.slf4j-api-1.6.1.jar}:\
-    ${file.reference.slf4j-simple-1.6.1.jar}:\
-    ${file.reference.xstream-1.3.1.jar}
+    ${file.reference.xstream-1.3.1.jar}:\
+    ${file.reference.jettison-1.2.jar}:\
+    ${file.reference.stax-1.2.0.jar}:\
+    ${file.reference.logback-classic-0.9.28.jar}:\
+    ${file.reference.logback-core-0.9.28.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
