Split examples and framework into two separate projects.  Framework is no longer a web project which makes producing a JAR file much simpler.

--- a/example/nbproject/project.properties
+++ b/example/nbproject/project.properties
@@ -25,25 +25,26 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.jettison-1.2.jar=libs/jettison-1.2.jar
-file.reference.logback-classic-0.9.28.jar=libs/logback-classic-0.9.28.jar
-file.reference.logback-core-0.9.28.jar=libs/logback-core-0.9.28.jar
-file.reference.slf4j-api-1.6.1.jar=libs/slf4j-api-1.6.1.jar
-file.reference.stax-1.2.0.jar=libs/stax-1.2.0.jar
-file.reference.xstream-1.3.1.jar=libs/xstream-1.3.1.jar
+file.reference.jettison-1.2.jar=../libs/jettison-1.2.jar
+file.reference.logback-classic-0.9.28.jar=../libs/logback-classic-0.9.28.jar
+file.reference.logback-core-0.9.28.jar=../libs/logback-core-0.9.28.jar
+file.reference.slf4j-api-1.6.1.jar=../libs/slf4j-api-1.6.1.jar
+file.reference.stax-1.2.0.jar=../libs/stax-1.2.0.jar
+file.reference.xstream-1.3.1.jar=../libs/xstream-1.3.1.jar
 includes=**
 j2ee.deploy.on.save=true
 j2ee.platform=1.5
-j2ee.platform.classpath=${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-3.3.1.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/bin/tomcat-juli.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/bin/tomcat-juli.jar
 j2ee.server.type=Tomcat60
 jar.compress=true
 javac.classpath=\
-    ${file.reference.slf4j-api-1.6.1.jar}:\
-    ${file.reference.xstream-1.3.1.jar}:\
     ${file.reference.jettison-1.2.jar}:\
-    ${file.reference.stax-1.2.0.jar}:\
     ${file.reference.logback-classic-0.9.28.jar}:\
-    ${file.reference.logback-core-0.9.28.jar}
+    ${file.reference.logback-core-0.9.28.jar}:\
+    ${file.reference.slf4j-api-1.6.1.jar}:\
+    ${file.reference.stax-1.2.0.jar}:\
+    ${file.reference.xstream-1.3.1.jar}:\
+    ${reference.orest-framework.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -74,6 +75,8 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
+project.orest-framework=../framework
+reference.orest-framework.jar=${project.orest-framework}/dist/orest-framework.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
@@ -86,7 +89,7 @@ source.root=src
 src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
-war.ear.name=orest.war
-war.name=orest.war
+war.ear.name=orest-example.war
+war.name=orest-example.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
