--- a/example/services/nbproject/project.properties
+++ b/example/services/nbproject/project.properties
@@ -25,12 +25,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.jettison-1.2.jar=../libs/jettison-1.2.jar
-file.reference.logback-classic-0.9.28.jar=../libs/logback-classic-0.9.28.jar
-file.reference.logback-core-0.9.28.jar=../libs/logback-core-0.9.28.jar
-file.reference.slf4j-api-1.6.1.jar=../libs/slf4j-api-1.6.1.jar
-file.reference.stax-1.2.0.jar=../libs/stax-1.2.0.jar
-file.reference.xstream-1.3.1.jar=../libs/xstream-1.3.1.jar
+file.reference.jettison-1.2.jar=../../libs/jettison-1.2.jar
+file.reference.logback-classic-0.9.28.jar=../../libs/logback-classic-0.9.28.jar
+file.reference.logback-core-0.9.28.jar=../../libs/logback-core-0.9.28.jar
+file.reference.slf4j-api-1.6.1.jar=../../libs/slf4j-api-1.6.1.jar
+file.reference.stax-1.2.0.jar=../../libs/stax-1.2.0.jar
+file.reference.xstream-1.3.1.jar=../../libs/xstream-1.3.1.jar
 includes=**
 j2ee.deploy.on.save=true
 j2ee.platform=1.5
@@ -75,7 +75,7 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
-project.orest-framework=../framework
+project.orest-framework=../../framework
 reference.orest-framework.jar=${project.orest-framework}/dist/orest-framework.jar
 resource.dir=setup
 run.test.classpath=\
@@ -89,7 +89,7 @@ source.root=src
 src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
-war.ear.name=orest-example.war
-war.name=orest-example.war
+war.ear.name=orest-example-services.war
+war.name=orest-example-services.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
